# Changelog

All notable changes to this project will be documented in this file.

The format is based on [Keep a Changelog](https://keepachangelog.com/en/1.0.0/),
and this project adheres to [Semantic Versioning](https://semver.org/spec/v2.0.0.html).

## [Unreleased]

### Added

* Log output and runtime config to /var/log/evocheck.log.

## [23.02] - 2023-02-10

### Fixed

* Release with the correct version number.

## [22.12] - 2023-02-10

### Changed

- Replaced check_sudomaint with check_doasmaint because evomaintenance is used with doas, not with sudo

### Fixed

- check_history: escape $HOME variable
- check_pkgmirror: fix openbsd mirror

### Removed

- check_wheel: wheel group mustn't be sudo because we use the evolinux-sudo group

## [22.11] - 2022-11-28

### Changed

- check_pkgmirror: use our own openbsd mirror

## [22.10] - 2022-10-14

### Changed

- check_evobackup_exclude_mount: skip if --one-file-system is used, and exclude scripts without Rsync command
- check_backupuptodate: use find with --max-depth=1 to limit the number of evaluated files
- check_sshpermitrootno: do not display sshd errors
- check_ntp: comply with ntp configuration change on EvoBSD

## [22.08] - 2022-08-04

### Fixed

- Fixed check_sshpermitrootno to check real configuration

## [22.06] - 2022-06-16

### Changed

- Fixed various shellcheck violations
- Added a function to cleanup files at once instead of using multiple trap rm

## [22.04] - 2022-04-13

### Added

- Added check_root_user: make sure that root user does not have a password

## [22.03] - 2022-03-10

### Added

- check_evomaintenanceconf: check existence and rights of evomaintenance conf file
- Added check_nrpeopensmtpd to ensure that opensmtpd is used for mailq nrpe check
- Added check_sshallowusers to ensure that AllowUsers or AllowGroups directive is present in sshd_config
- Added check_evobackup_exclude_mount to ensure that NFS mounts are excluded from backup