@@ -10,6 +10,7 @@ and this project adheres to [Semantic Versioning](https://semver.org/spec/v2.0.0
 ### Added
 
 * Log output and runtime config to /var/log/evocheck.log.
+* check_mountfstab and check_mount : make sure all mounted partitions are in fstab and all partitions in fstab are mounted
 
 ## [23.02] - 2023-02-10
 
